added smooth dimming for the light

--- a/openhab.cfg
+++ b/openhab.cfg
@@ -1673,7 +1673,7 @@ tcp:refreshinterval=250
 # control of openHAB. Usefull after unclean shutdown. May cause serios issue if
 # other software/system is also controlling GPIO and there is a configuration
 # mistake for pin name/number. Default value if omitted: false.
-#gpio:force=true
+gpio:force=true
 
 ############################## Waterkotte EcoTouch Binding ############################
 #
